fix iphone container spacing issues, fix img to fill iphone screen; add blog links

--- a/main.css
+++ b/main.css
@@ -4,17 +4,6 @@ FONTS
 font-family: 'Fira Sans Condensed', sans-serif;
 */
 
-/*
-Vanguard Colors
-#efece3 linen
-#96151d red nav
-#8d4900 text brown
-#003c69 midnight blue
-#5c8033 dark olive green
-#555555 dim gray
-#666666 dim gray
-*/
-
 * {
   box-sizing: border-box;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -81,11 +70,6 @@ a {
 .nav-name:visited {
   color: inherit;
 }
-
-/*.nav-name:hover {
-  padding-bottom: 5px;
-  color: #0FC2EC;
-}*/
 
 nav {
   position: fixed;
@@ -261,16 +245,20 @@ div.project {
   color: #364D63;
 }
 
-
-
-
-
 .iphone-container {
   margin: 5px 40px 5px 10px;
-  border: 3px solid #d9dbdc;
+  border: 5px solid #d9dbdc;
   border-radius: 35px;
-  width: 294px;
+  width: 296px;
   float: right;
+}
+
+.iphone-container-left {
+  margin: 5px 10px 5px 40px;
+  border: 5px solid #d9dbdc;
+  border-radius: 35px;
+  width: 296px;
+  float: left;
 }
 
 .iphone-speaker {
@@ -283,31 +271,30 @@ div.project {
 
 .iphone-screen {
   height: 503px;
-  width: 283px;
-  border: 1px solid #d9dbdc;
+  width: 100%;
+  border: 1px solid #b6b8ba;
   margin: 0 auto 0 auto;
 }
 
 .iphone-button {
   height: 40px;
   width: 40px;
-  border: 1px solid #d9dbdc;
+  border: 2px solid #d9dbdc;
   border-radius: 100%;
   margin: 5px auto;
 }
 
-.img-right {
+.img-iphone {
   height: 100%;
+  width: 100%;
 }
 
-/*.img-right {
+.img-right {
   margin: 5px 40px 5px 10px;
   max-width: 45%;
   float: right;
   box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.1);
-  border: 8px solid #e8e8e8;
-  border-radius: 4px;
-}*/
+}
 
 .img-left {
   margin: 0 10px 0 40px;
@@ -345,7 +332,7 @@ div.project {
 
 
 /*Settings for mobile*/
-@media only screen and (max-width: 655px) {
+@media only screen and (max-width: 660px) {
   .name-container {
     display: none;
   }
@@ -413,6 +400,20 @@ div.project {
     padding-left: 0;
     margin: 10px auto;
     width: 80%;
+  }
+
+  .iphone-container {
+    float: none;
+    display: block;
+    margin: 10px auto;
+    max-width: 90%;
+  }
+
+  .iphone-container-left {
+    float: none;
+    display: block;
+    margin: 10px auto;
+    max-width: 90%;
   }
 
   .img-right {
